Fix an issue where icons for rundown items became misaligned as the items grew in size

--- a/plugins/rundown/app/components/RundownItemIndicatorsSection/style.css
+++ b/plugins/rundown/app/components/RundownItemIndicatorsSection/style.css
@@ -1,7 +1,5 @@
 .RundownItemIndicatorsSection {
   display: flex;
-  height: 1.2em;
-
   align-items: center;
   justify-content: flex-end;
 }
@@ -9,8 +7,13 @@
 .RundownItemIndicatorsSection-icon {
   display: inline-block;
   width: 1.2em;
+  height: 1.2em;
 }
 
 .RundownItemIndicatorsSection-icon:not(:last-child) {
   margin-right: 5px;
+}
+
+.RundownItemIndicatorsSection-icon .Icon {
+  height: inherit;
 }
